<resources>
    <string name="app_name">ParentParadise</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_Open">Open</string>
    <string name="text_Close">Close</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_acc_code">使用者代號</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="msg_InsertFail">Add Article Faild</string>
    <string name="msg_InsertSuccess">Add Article Success</string>
    <string name="msg_NoNetwork">No Network</string>
    <string name="msg_NotUploadWithoutPicture">Photos or content not found!</string>
    <string name="title_activity_community_add">確定加好友？</string>
	<string name="msg_NoDataFound">msg_NoDataFound</string>
    <string name="msg_NoFriendFound">msg_NoFriendFound</string>
    <string name="text_InvalidName">text_InvalidName</string>
    <string name="msg_NoIDFound">msg_NoIDFound</string>
    <string name="msg_NoChatFound">msg_NoChatFound</string>
    <string name="hint_searchId">searchId</string>
</resources>
